// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SchemaContent should render correctly 1`] = `
.c5 {
  box-sizing: border-box;
  color: #7F8C9B;
  display: inline-block;
  direction: ltr;
  font-family: Material Symbols Outlined;
  font-variation-settings: 'FILL' 1,'wght' 400,'GRAD' 0,'opsz' 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  word-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: "liga";
}

.c5 >span {
  display: inline-block;
}

.c5.c5 {
  max-width: unset;
}

.c6 {
  display: inline;
}

.c3 {
  align-items: center;
  align-self: flex-start;
  background-color: transparent;
  border-radius: 0;
  display: flex;
  margin-right: 4px;
  position: absolute;
  top: calc((1.125rem - calc(1rem * 1.2)) * 0.5);
  width: auto;
  left: calc(-4px - calc(1rem * 1.2));
}

.c3 .c4 {
  color: inherit;
  font-size: calc(1rem * 1.2);
}

.c2 {
  flex: 1;
  line-height: 1.125rem;
  margin-left: calc(calc(1rem * 1.2) + 4px);
  outline: none;
  position: relative;
}

.c1 {
  align-items: center;
  box-sizing: border-box;
  background-color: #596673;
  color: #fff;
  display: flex;
  flex-direction: row;
  font-size: 0.75rem;
  font-weight: 700;
  min-height: inherit;
  outline: none;
  padding: 8px 16px;
}

.c1:focus-within {
  background-color: #d50075;
  color: #fff;
  position: relative;
}

.c1:focus-within .c4 {
  color: #fff;
}

.c1:focus-within:before {
  border: 1px dotted #fff;
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  pointer-events: none;
  right: 0;
  top: 0;
}

.c0 {
  display: flex;
  flex-direction: column;
  font-family: "Open Sans",sans-serif;
  font-size: 0.75rem;
  min-height: 36px;
}

@media (pointer: coarse) {
  .c1:active {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    background-color: #d50075;
    box-shadow: none;
    cursor: pointer;
  }
}

@media (pointer: fine) {
  .c1:hover {
    background-color: #d50075;
    box-shadow: none;
    cursor: pointer;
  }
}

<div>
  <div
    class="c0 collapsiblePanel"
    data-role="collapsible-panel"
  >
    <div
      class="c1 collapsiblePanel__title"
      data-role="collapsible-panel-header"
    >
      <div
        aria-expanded="false"
        class="c2 collapsiblePanel__label"
        data-role="collapsible-panel-title-wrapper"
        role="button"
        tabindex="0"
      >
        <div
          class="c3 collapsiblePanel__indicator"
          data-role="collapsible-panel-indicator"
        >
          <i
            class="c4 c5 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              keyboard_arrow_right
            </span>
          </i>
        </div>
        <div
          class="c6 collapsiblePanel__label--text"
          data-role="collapsible-panel-title"
        >
          Document Model References
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 collapsiblePanel"
    data-role="collapsible-panel"
  >
    <div
      class="c1 collapsiblePanel__title"
      data-role="collapsible-panel-header"
    >
      <div
        aria-expanded="false"
        class="c2 collapsiblePanel__label"
        data-role="collapsible-panel-title-wrapper"
        role="button"
        tabindex="0"
      >
        <div
          class="c3 collapsiblePanel__indicator"
          data-role="collapsible-panel-indicator"
        >
          <i
            class="c4 c5 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              keyboard_arrow_right
            </span>
          </i>
        </div>
        <div
          class="c6 collapsiblePanel__label--text"
          data-role="collapsible-panel-title"
        >
          Print Model References
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 collapsiblePanel"
    data-role="collapsible-panel"
  >
    <div
      class="c1 collapsiblePanel__title"
      data-role="collapsible-panel-header"
    >
      <div
        aria-expanded="false"
        class="c2 collapsiblePanel__label"
        data-role="collapsible-panel-title-wrapper"
        role="button"
        tabindex="0"
      >
        <div
          class="c3 collapsiblePanel__indicator"
          data-role="collapsible-panel-indicator"
        >
          <i
            class="c4 c5 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              keyboard_arrow_right
            </span>
          </i>
        </div>
        <div
          class="c6 collapsiblePanel__label--text"
          data-role="collapsible-panel-title"
        >
          Typesetting Model References
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaContent should render correctly 2`] = `
.c33 {
  display: inline-block;
  font-size: 0;
  vertical-align: middle;
  color: #0568ae;
}

.c5 {
  box-sizing: border-box;
  color: #7F8C9B;
  display: inline-block;
  direction: ltr;
  font-family: Material Symbols Outlined;
  font-variation-settings: 'FILL' 1,'wght' 400,'GRAD' 0,'opsz' 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  word-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: "liga";
}

.c5 >span {
  display: inline-block;
}

.c5.c5 {
  max-width: unset;
}

.c32 .c5 {
  color: inherit;
}

.c17 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans",sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border: 2px solid transparent;
  border-radius: 0;
  padding: 0 8px;
  position: relative;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  color: #a9b3bc;
  cursor: default;
}

.c17 .c4 {
  user-select: none;
  -webkit-user-select: none;
}

.c17 .c4 {
  color: inherit;
}

.c17.c17.c17:-moz-focusring {
  outline: none;
}

.c17.c17 .c4 {
  color: inherit;
}

.c32 .c17 .c4 {
  font-size: 1.25rem;
}

.c32 .c17.c17 {
  color: #a9b3bc;
  width: auto;
  height: auto;
  min-height: 0;
}

.h_inlineBlock.h_middleAlign .c17.c17 {
  display: block;
  height: auto;
  min-height: 0;
}

.h_inlineBlock.h_middleAlign .c17.c17 >.c4 {
  display: block;
}

.c29 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans",sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0;
  padding: 0;
  width: 2rem;
  background: transparent;
  color: #0568ae;
}

.c29 .c4 {
  user-select: none;
  -webkit-user-select: none;
}

.c29 .c4 {
  color: inherit;
}

.c29 .c4 {
  font-size: inherit;
}

.c29:not(:disabled):focus {
  outline: 1px dotted #333;
  background-color: transparent;
  box-shadow: none;
  color: #d50075;
  border: 2px solid #d50075;
}

.c32 .c29.c29 {
  font-size: 1.25rem;
  height: fit-content;
  min-height: 0;
  padding: 0;
  width: fit-content;
}

.c32 .c29.c29:not(:active):not(:hover):not(:focus) {
  color: inherit;
}

.c32 .c29.c29:not(:active):not(:hover):not(:focus) .c4:not(.StyledVariantIconWrapper-sc-aKNbV) {
  color: inherit;
}

.c32 .c29.c29:focus .c4 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c29.c29 {
  display: block;
  height: auto;
  min-height: 0;
}

.h_inlineBlock.h_middleAlign .c29.c29 >.c4 {
  display: block;
}

.c7 {
  color: #4d4d4d;
}

.c6 {
  display: inline;
}

.c3 {
  align-items: center;
  align-self: flex-start;
  background-color: transparent;
  border-radius: 0;
  display: flex;
  margin-right: 4px;
  position: absolute;
  top: calc((1.125rem - calc(1rem * 1.2)) * 0.5);
  width: auto;
  left: calc(-4px - calc(1rem * 1.2));
}

.c3 .c4 {
  color: inherit;
  font-size: calc(1rem * 1.2);
}

.c2 {
  flex: 1;
  line-height: 1.125rem;
  margin-left: calc(calc(1rem * 1.2) + 4px);
  outline: none;
  position: relative;
}

.c1 {
  align-items: center;
  box-sizing: border-box;
  background-color: #596673;
  color: #fff;
  display: flex;
  flex-direction: row;
  font-size: 0.75rem;
  font-weight: 700;
  min-height: inherit;
  outline: none;
  padding: 8px 16px;
}

.c1:focus-within {
  background-color: #d50075;
  color: #fff;
  position: relative;
}

.c1:focus-within .c4 {
  color: #fff;
}

.c1:focus-within:before {
  border: 1px dotted #fff;
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  pointer-events: none;
  right: 0;
  top: 0;
}

.c0 {
  display: flex;
  flex-direction: column;
  font-family: "Open Sans",sans-serif;
  font-size: 0.75rem;
  min-height: 36px;
}

.c27 {
  background-color: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0;
  width: 100%;
}

.c27::placeholder {
  font-style: italic;
  color: #596673;
  opacity: 1;
}

.c25 {
  background-color: #f1f2f4;
  border: none;
  border-radius: 0;
  box-shadow: 0 1px 0 0 #596673;
  color: #4d4d4d;
  display: flex;
  font-family: "Open Sans",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: 1px solid transparent;
  height: 32px;
  background-color: #f1f2f4;
  box-shadow: none;
}

.c25 .c16 {
  border-radius: 0;
}

.c20 {
  display: inline-flex;
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c20 .c22 {
  display: flex;
  width: 100%;
}

.c20 * {
  max-width: 100%;
}

.c10 {
  box-sizing: border-box;
  display: inline-block;
}

.c10 .c32 {
  align-self: center;
  flex-shrink: 0;
  text-align: right;
  width: 28px;
}

.c24 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c24 >.c32 {
  margin: 0 4px 4px 0;
}

.c31 {
  box-sizing: border-box;
  display: inline-block;
}

.c31 >.c32 {
  margin: 0 4px 4px 0;
}

.c23 {
  display: inline-flex;
}

.c23 .c9 {
  flex-basis: 160px;
  flex-grow: 1;
  flex-shrink: 1;
  max-width: 100%;
}

.c26 {
  border: 0;
  clip: rect(0 0 0 0);
  clip-path: inset(100%);
  height: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c13 {
  appearance: none;
  background-color: inherit;
  -moz-appearance: none;
  border: none;
  border-radius: 0;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0 12px;
  padding-right: 32px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c13.c13.c13 {
  outline: 1px solid transparent;
}

.c13::selection {
  background-color: transparent;
}

.c13::placeholder {
  font-style: italic;
  color: #596673;
  opacity: 1;
}

.c11 {
  background-color: transparent;
  box-shadow: none;
  border: none;
  border-radius: 0;
  color: #4d4d4d;
  display: flex;
  font-family: "Open Sans",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c11:focus {
  outline: none;
}

.c12 {
  background-color: #f1f2f4;
  border-radius: inherit;
  box-shadow: 0 1px 0 0 #596673;
  display: flex;
  flex-grow: 1;
  position: relative;
}

.c12:focus-within {
  box-shadow: 0 2px 0 0 #d50075;
  outline-offset: 0;
  outline: 1px dotted #333;
}

.c12 .StyledFieldPrefixWrapper-sc-gvObj>.c4 {
  color: inherit;
  cursor: default;
}

.c15:after {
  align-items: center;
  color: #7F8C9B;
  content: "\\e313";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1,"wght" 400,"GRAD" 0,"opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  word-wrap: normal;
}

.c14 {
  appearance: none;
  font-style: normal;
  color: #4d4d4d;
  font-size: inherit;
}

.c14:focus {
  border: none;
}

.c8 {
  border-bottom: 1px solid #fff;
  background: #fff;
  display: flex;
  padding: 10px;
  gap: 5px;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c18 {
  border-bottom: 1px solid #fff;
}

.c19 {
  display: flex;
  gap: 5px;
  padding: 10px;
  align-items: center;
  justify-content: space-between;
}

.c21 {
  min-width: 40%;
  max-width: 40%;
}

.c28 {
  max-width: 45%;
  min-width: 45%;
  word-wrap: break-word;
}

.c30 {
  visibility: visibility;
}

@media (pointer: coarse) {
  .c29:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    background-color: transparent;
    box-shadow: none;
    color: #d50075;
    border: 2px solid #d50075;
  }
}

@media (pointer: fine) {
  .c29:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: #d50075;
    border: 2px solid #d50075;
  }
}

@media (pointer: fine) {
  .c29:hover {
    outline: 1px solid transparent;
  }
}

@media (pointer: coarse) {
  .c32 .c29.c29:active {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
  }

  .c32 .c29.c29:active .c4 {
    color: inherit;
  }
}

@media (pointer: fine) {
  .c32 .c29.c29:hover .c4 {
    color: inherit;
  }
}

@media (pointer: coarse) {
  .c1:active {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    background-color: #d50075;
    box-shadow: none;
    cursor: pointer;
  }
}

@media (pointer: fine) {
  .c1:hover {
    background-color: #d50075;
    box-shadow: none;
    cursor: pointer;
  }
}

@media (pointer: coarse) {
  .c12:active {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    box-shadow: 0 2px 0 0 #d50075;
  }
}

@media (pointer: fine) {
  .c12:hover {
    box-shadow: 0 2px 0 0 #d50075;
  }
}

@media (pointer: coarse) {
  .c14:active {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    background-color: #d50075;
    color: #fff;
  }
}

@media (pointer: fine) {
  .c14:hover {
    background-color: #d50075;
    color: #fff;
  }
}

<div>
  <div
    class="c0 collapsiblePanel"
    data-role="collapsible-panel"
  >
    <div
      class="c1 collapsiblePanel__title"
      data-role="collapsible-panel-header"
    >
      <div
        aria-expanded="true"
        class="c2 collapsiblePanel__label"
        data-role="collapsible-panel-title-wrapper"
        role="button"
        tabindex="0"
      >
        <div
          class="c3 collapsiblePanel__indicator"
          data-role="collapsible-panel-indicator"
        >
          <i
            class="c4 c5 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              keyboard_arrow_down
            </span>
          </i>
        </div>
        <div
          class="c6 collapsiblePanel__label--text"
          data-role="collapsible-panel-title"
        >
          Document Model References
        </div>
      </div>
    </div>
    <div
      class="c7 collapsiblePanel__content"
      data-role="collapsible-panel-content"
      role="document"
    >
      <div
        class="c8"
      >
        <div
          class="c9 c10 field field--tooltips field--tooltips-2 -u-flex-1"
          data-role="select"
        >
          <div
            class="c11 field__select"
            data-role="select-control"
          >
            <div
              class="c12 field__select-wrapper"
              data-role="select-wrapper"
            >
              <select
                class="c13 field__selectTitle"
                data-role="select-input"
              >
                <option
                  disabled=""
                  label="Please choose..."
                  value=""
                />
                <option
                  class="c14 field__selectOption"
                  data-role="select-option"
                  value="DomainAddress"
                >
                  DomainAddress
                </option>
              </select>
              <span
                aria-hidden="true"
                class="c15 field__select-arrow"
              />
            </div>
          </div>
        </div>
        <button
          aria-label="Add"
          class="c16 c17 button button--secondary"
          data-role="button"
          disabled=""
          title="Add"
          type="button"
        >
          <i
            class="c4 c5 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              add
            </span>
          </i>
          <span
            data-role="button-label"
          >
            Add
          </span>
        </button>
      </div>
      <div
        class="c18"
        data-testid="document-model-reference-card"
      >
        <div
          class="c19"
        >
          <div
            class="c20 field-wrapper field-wrapper--block c21"
            data-role="text-field"
          >
            <div
              class="c22 c23 field__main"
            >
              <div
                class="c9 c24 field"
                data-role="text-field-control"
              >
                <div
                  class="c25 field__input field__input--readonly"
                  data-readonly="true"
                  data-role="text-field-input-wrapper"
                >
                  <span
                    class="c26 supported-unseen-span"
                  />
                  <input
                    class="c27 field__text"
                    data-role="text-field-input"
                    readonly=""
                    type="text"
                    value="DomainPerson"
                  />
                  <span
                    class="c26 supported-unseen-span"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="c28"
          >
            Person
          </div>
          <button
            aria-label="Open Setting"
            class="c16 c29 button button--icon c30"
            data-role="button"
            data-type="icon"
            title="Open Setting"
            type="button"
          >
            <i
              class="c4 c5 plasma-icon"
              data-role="plasma-icon"
            >
              <span
                aria-hidden="true"
              >
                settings
              </span>
            </i>
          </button>
        </div>
      </div>
      <div
        class="c18"
        data-testid="document-model-reference-card"
      >
        <div
          class="c19"
        >
          <div
            class="c20 field-wrapper field-wrapper--block c21"
            data-role="text-field"
          >
            <div
              class="c22 c23 field__main"
            >
              <div
                class="c9 c24 field"
                data-role="text-field-control"
              >
                <div
                  class="c25 field__input field__input--readonly"
                  data-readonly="true"
                  data-role="text-field-input-wrapper"
                >
                  <span
                    class="c26 supported-unseen-span"
                  />
                  <input
                    class="c27 field__text"
                    data-role="text-field-input"
                    readonly=""
                    type="text"
                    value="DomainText"
                  />
                  <span
                    class="c26 supported-unseen-span"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="c28"
          >
            Text
          </div>
          <button
            aria-label="Open Setting"
            class="c16 c29 button button--icon c30"
            data-role="button"
            data-type="icon"
            title="Open Setting"
            type="button"
          >
            <i
              class="c4 c5 plasma-icon"
              data-role="plasma-icon"
            >
              <span
                aria-hidden="true"
              >
                settings
              </span>
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 collapsiblePanel"
    data-role="collapsible-panel"
  >
    <div
      class="c1 collapsiblePanel__title"
      data-role="collapsible-panel-header"
    >
      <div
        aria-expanded="true"
        class="c2 collapsiblePanel__label"
        data-role="collapsible-panel-title-wrapper"
        role="button"
        tabindex="0"
      >
        <div
          class="c3 collapsiblePanel__indicator"
          data-role="collapsible-panel-indicator"
        >
          <i
            class="c4 c5 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              keyboard_arrow_down
            </span>
          </i>
        </div>
        <div
          class="c6 collapsiblePanel__label--text"
          data-role="collapsible-panel-title"
        >
          Print Model References
        </div>
      </div>
    </div>
    <div
      class="c7 collapsiblePanel__content"
      data-role="collapsible-panel-content"
      role="document"
    >
      <div
        class="c8"
      >
        <div
          class="c9 c31 field -u-flex-1"
          data-role="select"
        >
          <div
            class="c11 field__select"
            data-role="select-control"
          >
            <div
              class="c12 field__select-wrapper"
              data-role="select-wrapper"
            >
              <select
                class="c13 field__selectTitle"
                data-role="select-input"
              >
                <option
                  disabled=""
                  label="Please choose..."
                  value=""
                />
              </select>
              <span
                aria-hidden="true"
                class="c15 field__select-arrow"
              />
            </div>
          </div>
        </div>
        <span
          class="c32 c33 tooltip tooltip--hint"
          data-role="tooltip-trigger-wrapper"
          role="tooltip"
          title=""
        >
          <button
            aria-label="Add"
            class="c16 c17 button button--secondary"
            data-role="button"
            disabled=""
            title="Add"
            type="button"
          >
            <i
              class="c4 c5 plasma-icon"
              data-role="plasma-icon"
            >
              <span
                aria-hidden="true"
              >
                add
              </span>
            </i>
            <span
              data-role="button-label"
            >
              Add
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c0 collapsiblePanel"
    data-role="collapsible-panel"
  >
    <div
      class="c1 collapsiblePanel__title"
      data-role="collapsible-panel-header"
    >
      <div
        aria-expanded="false"
        class="c2 collapsiblePanel__label"
        data-role="collapsible-panel-title-wrapper"
        role="button"
        tabindex="0"
      >
        <div
          class="c3 collapsiblePanel__indicator"
          data-role="collapsible-panel-indicator"
        >
          <i
            class="c4 c5 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              keyboard_arrow_right
            </span>
          </i>
        </div>
        <div
          class="c6 collapsiblePanel__label--text"
          data-role="collapsible-panel-title"
        >
          Typesetting Model References
        </div>
      </div>
    </div>
  </div>
</div>
`;
